[package]
name = "fly"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]

[dependencies]
bytes = "0.4"
tokio = "0.1"
tokio-signal = "0.2"
futures = "0.1.25"
log = "*"
env_logger = "*"
lazy_static = "1.1"
lazy-static-include = "1.2"
libc = "*"
flatbuffers = { path = "./third_party/flatbuffers/rust/flatbuffers" }
hyper = "0.12"
hyper-tls = "0.3"
http = "*"
rusqlite = {version="0.15", features=["bundled", "blob", "chrono"]}
r2d2 = "0.8"
r2d2_sqlite = "0.7"
r2d2_redis = "0.8"
redis = "0.9"
r2d2_postgres = "0.14"
postgres = {version="0.15", features=["with-serde_json"]}
postgres-openssl = "0.1"
openssl = "0.10"
sha2 = "0.7"
sha-1 = "0.7"
url = "1.7"
sourcemap = "2.2"
rand = "0.5"
libfly = { path = "libfly" }
tokio-udp = "0.1"
trust-dns-server = "0.15"
trust-dns = "0.15"
trust-dns-resolver = "0.10"
trust-dns-proto = "*"
glob = "0.2"
clap = "2.32"
config = "0.9"
chrono = "0.4"
serde_derive = "1"
serde = "1"
serde_json = "1.0"

# [patch.crates-io]
# tokio = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-udp = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-tcp = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-executor = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-reactor = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-io = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-timer = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-threadpool = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}
# tokio-codec = {git = "https://github.com/tokio-rs/tokio.git", rev = "ed3ece266b5ab2ae3795a91d8dac25bc0fdfeec2"}

[workspace]
members = [
    "libfly",
    "vips",
    "distributed-fly",
]