[package]
name = "fly"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
chrono = "0.4"
clap = "2.32"
config = "0.9"
env_logger = "*"
flatbuffers = "0.5"
floating-duration = "0.1"
futures = "0.1.25"
glob = "0.2"
http = "*"
hyper = "0.12"
hyper-tls = "0.3"
image = "0.20"
ksuid = "0.2"
lazy_static = "1.1"
lazy-static-include = "1.2"
libc = "*"
libfly = { path = "libfly" }
libwebp-sys = "0.2"
log = "*"
openssl = {version="0.10", features=["vendored"]}
postgres = {version="0.15", features=["with-serde_json"]}
postgres-openssl = "0.1"
prometheus = "0.4"
r2d2 = "0.8"
r2d2_postgres = "0.14"
r2d2_redis = "0.8"
r2d2_sqlite = "0.7"
rand = "0.5"
redis = "0.9"
rusqlite = {version="0.15", features=["bundled", "blob", "chrono"]}
serde = {version="1.0",default-features = false}
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.7"
sha2 = "0.7"
sourcemap = "2.2"
tokio = "0.1"
tokio-udp = "0.1"
trust-dns = "0.15"
trust-dns-proto = "*"
trust-dns-resolver = "0.10"
trust-dns-server = "0.15"
url = "1.7"

[workspace]
members = [
    "libfly",
    "distributed-fly",
    "create_snapshot"
]