[package]
name = "fly"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4.11"
chrono = "0.4.6"
clap = "2.32.0"
config = "0.9.2"
flatbuffers = "0.5.0"
floating-duration = "0.1.2"
futures = "0.1.25"
glob = "0.2.11"
http = "0.1.15"
hyper = "0.12.23"
hyper-tls = "0.3.1"
image = "0.21.0"
ksuid = "0.2.0"
lazy_static = "1.2.0"
lazy-static-include = "1.2.2"
libc = "0.2.48"
libfly = { path = "libfly" }
libwebp-sys = "0.2.0"
log = "0.4.6"
postgres = { version = "0.15.2", features = ["with-serde_json"] }
postgres-openssl = "0.1.0"
prometheus = "0.5.0"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.8.0"
r2d2_sqlite = "0.8.0"
rand = "0.6.5"
redis = "0.9.1"
rusqlite = { version = "0.16.0", features = ["bundled", "blob", "chrono"] }
serde = { version = "1.0.85", default-features = false }
serde_derive = "1.0.85"
serde_json = "1.0.37"
sha-1 = "0.8.1"
sha2 = "0.8.0"
slog = { version = "2.4.1", features = ["max_level_debug", "release_max_level_info"] }
slog-async = "2.3.0"
slog-scope = "4.1.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
sourcemap = "2.2.1"
tokio = "0.1.15"
tokio-udp = "0.1.3"
tokio-signal = "*"
trust-dns = "0.15.1"
trust-dns-resolver = "0.10.3"
trust-dns-server = "0.15.1"
url = "1.7.2"
openssl = "0.10.16"

[workspace]
members = [
    "libfly",
    "distributed-fly",
    "create_snapshot"
]

[features]
openssl_vendored = ["openssl/vendored"]