[package]
name = "distributed-fly"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
bytes = "*"
chrono = "0.4.6"
config = "0.9"
fly = { path="../" }
futures = "0.1"
hyper = "0.12"
lazy_static = "1.1"
log = {version="*", features = ["max_level_debug", "release_max_level_info"] }
prometheus = "0.5"
r2d2 = "*"
r2d2_redis = "*"
rmp-serde = "0.13.7"
rmpv = {version="0.4", features=["with-serde"]}
serde = {version="1.0",default-features = false}
serde_derive = "1.0"
serde_json = "1.0"
rusoto_core = "0.35"
rusoto_credential = "0.14"
rusoto_kms = "0.35"
sentry = "0.12"
sha2 = "0.8"
slog = {version="2.4.1", features = ["max_level_debug", "release_max_level_info"] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-scope = "4.1.1"
slog-stdlog = "3.0.2"
tokio = "0.1"
tokio-openssl = "0.3"
openssl = "0.10.16"

[target.'cfg(not(target_vendor = "alpine"))'.dependencies]
openssl = { version = "0.10.16", features = ["vendored"] }